# AlgoHW

./: pyproject.toml
hw1/: PlotsBuilder.ipynb  functions.py
hw2/: one_dimen.ipynb  one_dimensional_search.py  optimization.ipynb  optimization.py
hw3/: PlotsBuilder.ipynb  main.py
hw4/: PlotsBuilder.ipynb  main.py
hw5/: main.py
hw6/: main.py
hw8/: main.py
