[tool.poetry]
name = "algorithmshw"
version = "0.1.0"
description = "Homework for ITMO Algorithms course"
authors = ["Drozdov Gleb <drozdov.gleb.spb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
